package edu.hitsz.bullet;

/**
 * @author hitsz
 * @author fengyang
 */
public class EnemyBullet extends BaseBullet {
    
    public EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }
}
