package edu.hitsz.bullet;

/**
 * @author hitsz
 * @author fengyang
 */
public class HeroBullet extends BaseBullet {
    
    public HeroBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }
}
